implementing serverless authentication option

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
 NEXT_PUBLIC_TESTING_MODE=true
+APP_PASSWORD=
 
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 
-# Choose between standard API backend
+# Server
 NEXT_PUBLIC_API_URL=
 
-# or serverless DB
+# Serverless
 POSTGRES_URL=
 POSTGRES_URL_NON_POOLING=
 POSTGRES_USER=
@@ -15,3 +16,6 @@ POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
 POSTGRES_URL_NO_SSL=
 POSTGRES_PRISMA_URL=
+
+NEXT_PUBLIC_ORIGIN=
+JWT_PRIVATE_KEY=
