--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^6.19.0",
+    "@simplewebauthn/browser": "^13.2.2",
+    "@simplewebauthn/server": "^13.2.2",
     "@upstash/ratelimit": "^2.0.7",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
+    "jose": "^6.1.3",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "next-intl": "^4.5.8",
     "ogl": "^1.0.11",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
     "react-phone-number-input": "^3.4.14",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -28,6 +35,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
