some general improvements

--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,7 @@ POSTGRES_URL_NO_SSL=
 POSTGRES_PRISMA_URL=
 
 NEXT_PUBLIC_ORIGIN=
+NEXT_PUBLIC_RP_ID=
+NEXT_PUBLIC_ISSUER=
 JWT_PRIVATE_KEY=
+JWT_ALGORITHM=
