--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ UPSTASH_REDIS_REST_TOKEN=
 NEXT_PUBLIC_ORIGIN=
 
 # Serverless
+RESEND_API_KEY=
+EMAIL_FROM=
 NEXT_PUBLIC_RP_ID=
 NEXT_PUBLIC_ISSUER=
 JWT_PRIVATE_KEY=
