--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "react-phone-number-input": "^3.4.14",
+    "resend": "^6.6.0",
     "sonner": "^2.0.7",
     "zod": "^4.1.13"
   },
