--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,13 @@ APP_PASSWORD=
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 
-NEXT_PUBLIC_ORIGIN=
+ORIGIN=
 
 # Serverless
 RESEND_API_KEY=
 EMAIL_FROM=
-NEXT_PUBLIC_RP_ID=
-NEXT_PUBLIC_ISSUER=
+RP_ID=
+ISSUER=
 JWT_PRIVATE_KEY=
 
 POSTGRES_URL=
