--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@simplewebauthn/browser": "^13.2.2",
     "@simplewebauthn/server": "^13.2.2",
     "@upstash/ratelimit": "^2.0.7",
+    "babel-plugin-react-compiler": "^1.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "jose": "^6.1.3",
     "lucide-react": "^0.556.0",
-    "next": "16.0.8",
+    "next": "16.1.1",
     "next-intl": "^4.5.8",
     "ogl": "^1.0.11",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
     "react-phone-number-input": "^3.4.14",
     "resend": "^6.6.0",
@@ -32,12 +33,16 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.0.8",
+    "eslint-config-next": "16.1.1",
     "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
