linter for react compiler + cookie improvement + smal Form fix

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
 NEXT_PUBLIC_TESTING_MODE=true
+NEXT_PUBLIC_APP_NAME=Passkey
+NEXT_PUBLIC_DEFAULT_LOCALE=en
 APP_PASSWORD=
 
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 
-NEXT_PUBLIC_ORIGIN=
+# ORIGIN=http://localhost:8080
 
 # Serverless
+NEXT_PUBLIC_SERVERLESS=true
+ORIGIN=http://localhost:3000
 RESEND_API_KEY=
 EMAIL_FROM=
 RP_ID=
 ISSUER=
 JWT_PRIVATE_KEY=
+JWT_ALG=
 
 POSTGRES_URL=
 POSTGRES_URL_NON_POOLING=
