--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@simplewebauthn/server": "^13.2.2",
     "@upstash/ratelimit": "^2.0.7",
     "babel-plugin-react-compiler": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "jose": "^6.1.3",
@@ -28,6 +29,8 @@
     "react-phone-number-input": "^3.4.14",
     "resend": "^6.6.0",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.13"
   },
   "devDependencies": {
