--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
